# ocr

./: .flake8  .gitignore  Dockerfile  Procfile  README.md  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  steps.txt
.github/workflows/: python_build.yaml
ocr/: settings.py  settings_test.py  urls.py
ocr_engine/: gcp.py
statements/: models.py  parser.py  service.py  urls.py  views.py
statements/management/commands/: export_response.py  import.py  process.py
statements/migrations/: 0001_initial.py  0002_apiresponse_statement_api_response.py  0003_alter_apiresponse_table_alter_statement_table.py  0004_transaction.py
statements/tests/: conftest.py  test_models.py  test_parser.py  test_views.py
templates/statements/: base.html  statement_detail.html  statement_list.html  statement_upload.html
